add movie detail screen

--- a/TheMovieApp/Resources/en.lproj/Localizable.strings
+++ b/TheMovieApp/Resources/en.lproj/Localizable.strings
@@ -8,3 +8,5 @@
  ///Alert
  "alert.confirm" = "OK";
  "alert.cancel" = "Cancel";
+"movie.detail.addToFavorite" = "Add To Favorite";
+"movie.detail.removeFromFavorite" = "Remove From Favorite";
