--- a/TheMovieApp/Resources/en.lproj/Localizable.strings
+++ b/TheMovieApp/Resources/en.lproj/Localizable.strings
@@ -8,5 +8,10 @@
  ///Alert
  "alert.confirm" = "OK";
  "alert.cancel" = "Cancel";
+
+///Movie Detail Screen
 "movie.detail.addToFavorite" = "Add To Favorite";
 "movie.detail.removeFromFavorite" = "Remove From Favorite";
+
+//Home Screen
+"home.lastvisit" = "Last visit was";
